fix: Remove max-width off all `--align--right` text/heading components

--- a/src/scss/styles/layout.scss
+++ b/src/scss/styles/layout.scss
@@ -6,6 +6,7 @@
 	&--align--right {
 		@include media($mq-tablet_up) {
 			margin-left: auto;
+			max-width: none;
 			width: cols_pct(7);
 		}
 	}
